# actr-swift-package-sync

./: .gitignore  Cargo.toml  Package.swift  README.md  package-sync-source.json  release-metadata.json
.github/workflows/: build-xcframework.yml  manual-build.yml  release.yml
ActrBindings/: Actr.swift
Sources/Actr/: ActrRef.swift  ActrSystem.swift  ActrType+Extensions.swift  Exports.swift
bindings/ffi/: Cargo.toml
bindings/ffi/src/: context.rs  error.rs  lib.rs  opus.rs  types.rs  workload.rs
bindings/swift/: build-xcframework.sh
bindings/swift/ActrBindings/: Actr.swift
bindings/swift/ActrBindings/include/: actrFFI.h
bindings/swift/Sources/Actr/: ActrNode.swift  ActrRef.swift
bindings/swift/scripts/: package-binary.sh
core/config/: Cargo.toml  DESIGN_LOCK_FILE.md  test_config.toml
core/config/examples/: parse_config.rs  test_lock_format.rs
core/config/src/: config.rs  error.rs  lib.rs  lock.rs  raw.rs
core/config/src/parser/: mod.rs  v1.rs
core/framework/: Cargo.toml
core/framework/src/: context.rs  dest.rs  dispatcher.rs  lib.rs  test_support.rs  workload.rs
core/framework/src/util/: README.md  backoff.rs  geoip.rs  mod.rs
core/protocol/: .gitignore  Cargo.toml  README.md  README.zh.md  build.rs  uniffi.toml
core/protocol/proto/: actr.proto  signaling.proto
core/protocol/proto/actr/: options.proto
core/protocol/src/: actr_ext.rs  error.rs  lib.rs  message.rs  name.rs  uri.rs
core/protocol/src/turn/: mod.rs
core/runtime/: ARCHITECTURE.md  Cargo.toml
core/runtime-mailbox/: Cargo.toml  README.zh.md
core/runtime-mailbox/src/: dlq.rs  error.rs  lib.rs  mailbox.rs  sqlite.rs  sqlite_dlq.rs
core/runtime/src/: actr_ref.rs  ais_key_cache.rs  context.rs  context_factory.rs  error.rs  lib.rs  monitoring.rs  observability.rs  resource.rs
core/runtime/src/inbound/: data_stream_registry.rs  media_frame_registry.rs  mod.rs
core/runtime/src/lifecycle/: actr_node.rs  actr_system.rs  compat_lock.rs  dedup.rs  heartbeat.rs  mod.rs  network_event.rs
core/runtime/src/outbound/: inproc_out_gate.rs  mod.rs  outproc_out_gate.rs
core/runtime/src/transport/: backoff.rs  connection_event.rs  dest_transport.rs  error.rs  inproc_manager.rs  lane.rs  manager.rs  mod.rs  route_table.rs  session.rs  wire_builder.rs  wire_handle.rs  wire_pool.rs
core/runtime/src/wire/: mod.rs
core/runtime/src/wire/webrtc/: connection.rs  coordinator.rs  gate.rs  mod.rs  negotiator.rs  signaling.rs  trace.rs
core/runtime/src/wire/websocket/: connection.rs  gate.rs  mod.rs  server.rs
core/runtime/tests/: cleanup_during_request.rs  ice_restart.rs  ice_restart_with_signaling_disruption.rs  network_event_debounce.rs  network_event_handling.rs  outproc_connection_rebuild.rs  outproc_disconnect_reconnect.rs  reproduce_sctp_race_condition.rs  signaling_reconnect.rs  stale_callback_guard.rs
core/runtime/tests/common/: harness.rs  mod.rs  signaling.rs  utils.rs  vnet.rs
core/service-compat/: .commitlintrc.yml  Cargo.toml  README.md  README.zh.md
core/service-compat/.github/: dependabot.yml
core/service-compat/.github/workflows/: ci.yml  release.yml
core/service-compat/src/: compatibility.rs  fingerprint.rs  lib.rs  types.rs
