[workspace]
resolver = "2"
members = [
    "core/protocol",
    "core/service-compat",
    "core/config",
    "core/framework",
    "core/runtime-mailbox",
    "core/runtime",
    "bindings/ffi",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/actor-rtc/actr"
authors = ["Actor-RTC Contributors"]

[workspace.lints.clippy]
collapsible_if = "allow"
collapsible_else_if = "allow"

[workspace.dependencies]
# === Internal Dependencies (内部依赖) ===
actr-protocol = { path = "core/protocol", version = "0.2.0" }
proto-fingerprint = "0.1.0"
actr-service-compat = { path = "core/service-compat", version = "0.2.0" }
actr-config = { path = "core/config", version = "0.2.0" }
actr-framework = { path = "core/framework", version = "0.2.0" }
actr-framework-protoc-codegen = { path = "tools/protoc-gen/rust", version = "0.2.0" }
actr-runtime = { path = "core/runtime", version = "0.2.0" }
actr-runtime-mailbox = { path = "core/runtime-mailbox", version = "0.2.0" }

# === Async Runtime (异步运行时) ===
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"

# === Serialization (序列化) ===
prost = "0.14"
prost-types = "0.14"
prost-build = "0.14"
bytes = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
toml = "0.8"

# === Utilities (工具库) ===
uuid = { version = "1.18", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
pwrzv = "0.6.2"

# === Logging (日志) ===
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# === Observability (可观测性) ===
opentelemetry = { version = "0.30.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.31"

# === WebRTC (WebRTC) ===
webrtc = "0.14"

# === Storage (存储) ===
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }

# === Networking (网络) ===
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tokio-test = "0.4"
dashmap = "5.5"
crossbeam = "0.8"

# === Code Generation (代码生成) ===
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.5"

# === CLI Tools (CLI 工具) ===
clap = { version = "4.5", features = ["derive", "cargo"] }
fs_extra = "1.3"
tempfile = "3.23"
